Sanne's update part 1, more hover effects, smaller tiles on mobile, shorter names, small fixes

--- a/bestanden/css/main.sass
+++ b/bestanden/css/main.sass
@@ -4,6 +4,7 @@
 html
 	font-family: 'Robot', sans-serif
 	color: $black
+	max-width: 100vw
 
 body
 	margin: 0
@@ -103,6 +104,9 @@ input[type="checkbox"]
 		text-align: center
 		width: 100%
 
+		a:hover
+			color: $grey
+
 	.nav-bar
 		text-align: center
 		padding-top: 10px
@@ -113,6 +117,9 @@ input[type="checkbox"]
 			display: inline-block
 			padding-right: (10%/3)
 			color: $white
+
+		a:hover
+			color: $grey
 
 	.nav-bar.student
 		padding-left: 3em
@@ -258,7 +265,6 @@ input[type="checkbox"]
 		margin-bottom: 3.8%
 		display: inline-block
 
-
 footer
 	a
 		color: darken($grey, 20%)
@@ -288,7 +294,6 @@ footer
 		#mail
 			float: right
 			margin-right: 20%
-
 
 //buttons
 input
@@ -368,6 +373,7 @@ textarea:hover
 			padding-bottom: 1em
 			padding-left: 2em
 			padding-top: 2em
+			padding-left: 1em
 			box-sizing: border-box
 
 			.burger-icon
@@ -432,14 +438,21 @@ textarea:hover
 					text-align: left
 
 				.nav-bar
+					padding: 0
 					a
-						margin-top: 1em
+						margin-top: .5em
+
+					a:hover
+						color: $grey
 
 				.welcome
 					margin-top: 1em
 
 					a
 						display: inline-block
+
+					a:hover
+						color: $grey
 
 
 	.chapter-tiles
@@ -477,9 +490,11 @@ textarea:hover
 		.tile
 			width: 100%
 			background-size: 100%
+			height: 10em
+			line-height: 10em
 
 		.tile-content
-			font-size: 200%
+			font-size: 150%
 
 		.tile.active
 			width: 100%
@@ -495,7 +510,7 @@ textarea:hover
 
 	footer
 		.bar-large
-			padding-left: 2em
+			padding-left: 1em
 
 			.contact-info
 				#mail
